force-app/main/default/objects/Milestone_History__c/Milestone_History__c.object-meta.xml
<CustomObject>
    <description>Milestone History object tracks all the milestone an organisation goes through from Application, Contract and Investment record. This is one of the key reporting objects used within the IMS application</description>
    <label>Milestone History</label>
    <nameField>
        <displayFormat>MH-{00000000}</displayFormat>
        <label>Milestone History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Milestone Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>