force-app/main/default/objects/Milestone_History__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Application that this Milestone belongs to</description>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Milestone Histories</relationshipLabel>
    <relationshipName>Milestone_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>