force-app/main/default/objects/Milestone_History__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contract record that this milestone belongs to</description>
    <label>Contract</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>Milestone Histories</relationshipLabel>
    <relationshipName>Milestone_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>