force-app/main/default/objects/Milestone_History__c/fields/Days_in_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Milestone__c</fullName>
    <description>The number of days that the record was in this milestone (automatically calculated field with code)</description>
    <label>Days in Milestone</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>