force-app/main/default/objects/Milestone_History__c/fields/Investment__c.field-meta.xml
<CustomField>
    <fullName>Investment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Investment record that this milestone belongs to</description>
    <label>Investment</label>
    <referenceTo>Investment__c</referenceTo>
    <relationshipLabel>Milestone Histories</relationshipLabel>
    <relationshipName>Milestone_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>