force-app/main/default/objects/Milestone_History__c/fields/Milestone__c.field-meta.xml
<CustomField>
    <fullName>Milestone__c</fullName>
    <description>The name of the Milestone Stage/Status</description>
    <label>Milestone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>