force-app/main/default/objects/Milestone_History__c/fields/Milestone_Date__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Date__c</fullName>
    <description>The Date the milestone moved into the specific stage/status</description>
    <label>Milestone Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>