force-app/main/default/objects/Milestone_History__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Milestone__c</columns>
    <columns>Sequence__c</columns>
    <columns>Application__c</columns>
    <columns>Contract__c</columns>
    <columns>Investment__c</columns>
    <columns>Milestone_Date__c</columns>
    <columns>Days_in_Milestone__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>